--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "petmatch",
+  "name": "pam",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http:/cano1988.github.io/front-pet-project",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -11,6 +10,7 @@
     "confetti-js": "^0.0.18",
     "emailjs-com": "^3.2.0",
     "gh-pages": "^6.1.1",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.25.1",
